--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Snake Game</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
 
-        <canvas id="gameSnake" width="800" height="800"></canvas>
-        <script src="js/main.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Snake Game</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+
+    <canvas id="gameSnake" width="800" height="800"></canvas>
+    <div>
+        <div>Score</div>
+        <div id='score' class="score">0</div>
+    </div>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
-Pra mim o pior são os flamenguistas, o ano q meu time foi campeao da liberta INVICTO e campeao MUNDIAL sem precisar de prorrogacao eu tava cagando pro futebol deles, se estavam jogando bem ou mal... mas eh impressionante a preocupacao deles com a gente no ano q eles depois d tantos conseguiram ganhar algo!
