--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -17,6 +17,8 @@
     <div>
         <div>Score</div>
         <div id='score' class="score">0</div>
+        <div><input id="btnRestart"  type="button" value="Restart Game" /> </div>
+        <div><input id="bntShowScore"  type="button" value="Show Scores" /> </div>
     </div>
     <script src="js/main.js"></script>
 </body>
